--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "author": "Dominik Qiu <slaaker@126.com>",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "dev": "cross-env LINX_AGENT=vue webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "unit": "jest --config test/unit/jest.conf.js --coverage",
-    "e2e": "node test/e2e/runner.js",
-    "test": "npm run unit && npm run e2e",
-    "lint": "eslint --ext .js,.vue src test/unit test/e2e/specs",
-    "build": "node build/build.js",
+    "unit": "cross-env LINX_AGENT=vue jest --config test/unit/jest.conf.js --coverage",
+    "e2e": "cross-env LINX_AGENT=vue node test/e2e/runner.js",
+    "test": "cross-env LINX_AGENT=vue npm run unit && npm run e2e",
+    "lint": "cross-env LINX_AGENT=vue eslint --ext .js,.vue src test/unit test/e2e/specs",
+    "build": "cross-env LINX_AGENT=vue node build/build.js",
     "edev": "cross-env LINX_AGENT=electron npm run build && electron build/electron.js",
     "ebuild": "cross-env LINX_AGENT=electron electron-packager ./dist/ scristask --platform=darwin --arch=x64 --icon=./src/assets/favicon.ico --overwrite",
     "cdev": "cross-env LINX_AGENT=cordova node build/build.app.js",
