--- a/app/package.json
+++ b/app/package.json
@@ -1,20 +1,17 @@
 {
-    "name": "com.scrisstudio",
-    "displayName": "scristask",
-    "version": "1.0.0",
-    "description": "A sample Apache Cordova application that responds to the deviceready event.",
+    "name": "scristask-vue",
+    "version": "1.10.0",
+    "description": "The Vue.js remake version of Scris Task ",
+    "author": "Dominik <slaaker@126.com>",
+    "license": null,
     "main": "index.js",
+    "private": true,
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "author": "Apache Cordova Team",
-    "license": "Apache-2.0",
     "dependencies": {
-        "cordova-android": "^7.1.1",
         "cordova-browser": "^5.0.4",
-        "cordova-ios": "^4.5.5",
         "cordova-plugin-dialogs": "^2.0.1",
-        "cordova-plugin-splashscreen": "^5.0.2",
         "cordova-plugin-statusbar": "^2.4.2",
         "cordova-plugin-whitelist": "^1.3.3"
     },
@@ -22,12 +19,9 @@
         "plugins": {
             "cordova-plugin-whitelist": {},
             "cordova-plugin-dialogs": {},
-            "cordova-plugin-splashscreen": {},
             "cordova-plugin-statusbar": {}
         },
         "platforms": [
-            "ios",
-            "android",
             "browser"
         ]
     }
